--- a/index.html
+++ b/index.html
@@ -1,71 +1,44 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+---
+layout: default
+title: 
+---
+<div class="jumbotron" id="about">
+    <h1>Приветствуем вас на сайте {{ site.title }}!</h1>
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+    <p>
+        Минская PHP группа - это место для обмена опытом и знаниями, связанными с PHP, а также связанными с PHP
+        технологиями. Группа находится в Минске. Мы открыты для всех!
+    </p>
 
-  <title>index1.html</title>
-  <meta name="description" content="Minsk PHP Usergroup Website">
+    <ul title="Правила (дополняются)">
+        <li>группа не привязана ни к какой компании и открыта для всех</li>
+        <li>группа закрыта для представителей HR и рекрутинга (для этого в группе Facebook существует формальное
+            подтверждение на запрос о вступлении)
+        </li>
+    </ul>
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+    <p>
+        <a class="btn btn-primary btn-lg" role="button" href="https://www.facebook.com/groups/minsk.user.group/">Вступить</a>
+        <a class="btn info btn-lg" role="button"
+           href="https://www.google.com/calendar/ical/phpminsk%40gmail.com/public/basic.ics">Календарь митапов</a>
+    </p>
+</div>
 
-</head>
+<h1 id="social">Мы в соцсетях</h1>
+<ul>
+    <li><a href="https://www.facebook.com/groups/minsk.user.group/">Группа в Facebook</a></li>
+    <li><a href="https://www.youtube.com/user/PHPUserGroupMinsk/">Канал на YouTube</a></li>
+    <li><a href="https://twitter.com/phpminsk">Аккаунт в Twitter</a></li>
+    <li><a href="http://www.slideshare.net/MinskPHPUserGroup/">Аккаунт на SlideShare</a></li>
+    <li><a href="https://connect.sensiolabs.com/club/php-user-group-minsk">Клуб на SensioLabs Connect</a></li>
+    <li><a href="https://github.com/phpminsk/">Организация на GitHub</a></li>
+</ul>
 
-<body>
-
-  <div class="wrapper">
-    <header>
-      <h1 class="title">index1.html</h1>
-    </header>
-    <div id="container">
-      <p class="tagline">Minsk PHP Usergroup Website</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/phpminsk" class="code">View index1.html on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h3>
-<a name="test-2" class="anchor" href="#test-2"><span class="octicon octicon-link"></span></a>Test 2</h3>
-        </article>
-      </div>
-    </div>
-    <footer>
-      <div class="owner">
-
-      <p><a href="https://github.com/phpminsk" class="avatar"><img src="https://avatars1.githubusercontent.com/u/8297150?v=1&amp;s=60" width="48" height="48"></a>View <a href="https://github.com/phpminsk">phpminsk</a> on <a href="https://www.github.com">GitHub</a></p>
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="http://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/phpminsk/phpminsk.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/phpminsk/phpminsk.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-            <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-53375478-1");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
-
-</body>
-</html>
+<h1 id="contacts">Контакты</h1>
+<p>
+    Max Romanovsky:
+    <a href="mailto:max.romanovsky@gmail.com">E-mail</a> |
+    <a href="skype:max.romanovsky?call">Skype</a> |
+    <a href="https://www.facebook.com/max.romanovsky">Facebook</a> |
+    <a href="http://maxromanovsky.com/">Homepage</a>
+</p>
