updated links & messages

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 
+title:
 ---
 <div class="jumbotron" id="about">
     <h1>Приветствуем вас на сайте {{ site.title }}!</h1>
@@ -10,7 +10,8 @@ title:
         технологиями. Группа находится в Минске. Мы открыты для всех!
     </p>
 
-    <ul title="Правила (дополняются)">
+    <p>Правила:</p>
+    <ul>
         <li>группа не привязана ни к какой компании и открыта для всех</li>
         <li>группа закрыта для представителей HR и рекрутинга (для этого в группе Facebook существует формальное
             подтверждение на запрос о вступлении)
