updated meetup info

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@ layout: default
 title:
 ---
 <div class="jumbotron" id="about">
-    <h1>Приветствуем вас на сайте {{ site.title }}!</h1>
+    <h1>{{ site.title }}</h1>
+
+    <p>Приветствуем вас на нашем сайте!</p>
 
     <p>
         Минская PHP группа - это место для обмена опытом и знаниями, связанными с PHP, а также связанными с PHP
@@ -17,6 +19,11 @@ title:
             подтверждение на запрос о вступлении)
         </li>
     </ul>
+
+    <p>
+        Следующий <a href="https://www.facebook.com/events/600891746698048/">митап #9</a> пройдет 28 августа (четверг) в
+        19:00 в бизнес-клубе Imaguru (ул. Фабрициуса, 4)
+    </p>
 
     <p>
         <a class="btn btn-primary btn-lg" role="button" href="https://www.facebook.com/groups/minsk.user.group/">Вступить</a>
