--- a/meetups.html
+++ b/meetups.html
@@ -10,7 +10,7 @@ title: Архив встреч
 
 {% for meetup in site.data.meetups %}
 <h3 id="{{ meetup.facebook_event_id }}">{{ meetup.date }} <a
-        href="https://www.facebook.com/events/{{ meetup.facebook_event_id }}/">{{ meetup.title }}</a></h3>
+        href="https://www.facebook.com/events/{{ meetup.facebook_event_id }}/" target="_blank">{{ meetup.title }}</a></h3>
 {% if meetup.description %}
     <p>{{ meetup.description }}</p>
 {% endif %}
@@ -21,18 +21,18 @@ title: Архив встреч
             {% for speaker_name in talk.speakers %}
                 {% assign talk_speakers = site.data.speakers | where: "name", speaker_name %}
                 {% comment %} Single line above is an emulation of spaceless tag{% endcomment %}
-                {% for speaker in talk_speakers %}{% if speaker.facebook %}<a href="https://www.facebook.com/{{ speaker.facebook }}">{% endif %}{{ speaker.name }}{% if speaker.facebook %}</a>{% endif %}{% endfor %}{% if forloop.last == false %}, {% endif %}
+                {% for speaker in talk_speakers %}{% if speaker.facebook %}<a href="https://www.facebook.com/{{ speaker.facebook }}" target="_blank">{% endif %}{{ speaker.name }}{% if speaker.facebook %}</a>{% endif %}{% endfor %}{% if forloop.last == false %}, {% endif %}
             {% endfor %}
 
             {% if talk.slides.size > 0 %}
                 {% for slides in talk.slides %}
-                    <a href="{{ slides }}" class="btn btn-default btn-xs">Slides{% if talk.slides.size > 1 %} {{ forloop.index }}{% endif %}</a>
+                    <a href="{{ slides }}" target="_blank" class="btn btn-default btn-xs">Slides{% if talk.slides.size > 1 %} {{ forloop.index }}{% endif %}</a>
                 {% endfor %}
             {% endif %}
 
             {% if talk.video.size > 0 %}
                 {% for video in talk.video %}
-                    <a href="{{ video }}" class="btn btn-default btn-xs">Video{% if talk.video.size > 1 %} {{ forloop.index }}{% endif %}</a>
+                    <a href="{{ video }}" target="_blank" class="btn btn-default btn-xs">Video{% if talk.video.size > 1 %} {{ forloop.index }}{% endif %}</a>
                 {% endfor %}
             {% endif %}
         </li>
