Meetup #9 archive + blog

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@ title:
         </li>
     </ul>
 
-    <p>
-        Следующий <a href="https://www.facebook.com/events/600891746698048/" target="_blank">митап #9</a> пройдет 28 августа (четверг) в
-        19:00 в бизнес-клубе Imaguru (ул. Фабрициуса, 4)
-    </p>
+    <!--<p>-->
+        <!--Следующий <a href="https://www.facebook.com/events/600891746698048/" target="_blank">митап #9</a> пройдет 28 августа (четверг) в-->
+        <!--19:00 в бизнес-клубе Imaguru (ул. Фабрициуса, 4)-->
+    <!--</p>-->
 
     <p>
         <a class="btn btn-primary btn-lg" role="button" href="https://www.facebook.com/groups/minsk.user.group/" target="_blank">Вступить</a>
