Update index.html with #11 meetup information.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title:
     </ul>
 
     <p>
-        Следующий <a href="https://www.facebook.com/events/567209100071848/" target="_blank">митап #10</a> пройдет 25 сентября (четверг) в
+        Следующий <a href="https://www.facebook.com/events/357977821040246/?ref=4" target="_blank">митап #11</a> пройдет 30 октября (четверг) в
         19:00 в бизнес-клубе Imaguru (ул. Фабрициуса, 4) на 2м этаже
     </p>
 
